--- a/school_website/django.env
+++ b/school_website/django.env
@@ -1,8 +1,8 @@
-SECRET_KEY=22vv@db4qi&zdcxm8z#scye5i7s(j7e%&j!$s+z(+6)33943ji
+SECRET_KEY=secretkey
 DEBUG=False
 
-DB_NAME=school_prod_db
+DB_NAME=db
 DB_USER=admin
-DB_PASSWORD=asSk1!k6kcL#
+DB_PASSWORD=password
 DB_HOST=db
 DB_PORT=5432
